@@ -1,61 +1,0 @@
-#ifndef _DEV_IRQREG_UNIX_H_
-#define _DEV_IRQREG_UNIX_H_
-
-/*
- * Copyright (C) 2001-2004 by egnite Software GmbH. All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- *
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- * 3. Neither the name of the copyright holders nor the names of
- *    contributors may be used to endorse or promote products derived
- *    from this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY EGNITE SOFTWARE GMBH AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
- * FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL EGNITE
- * SOFTWARE GMBH OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
- * AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
- * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
- * THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
- * SUCH DAMAGE.
- *
- * For additional information see http://www.ethernut.de/
- */
-
-/*
- * $Log$
- * Revision 1.2  2008/08/11 06:59:59  haraldkipp
- * BSD types replaced by stdint types (feature request #1282721).
- *
- * Revision 1.1  2005/04/07 12:31:37  freckle
- * most unix emulation specific stuff now in irqreg_unix.h.
- * corrected #warning "MCU not defined"
- *
- */
-
-#include <signal.h>
-
-__BEGIN_DECLS
-
-extern uint8_t irq_processed;
-extern pthread_mutex_t irq_mutex;
-extern pthread_cond_t irq_cv;
-extern sigset_t irq_signal;
-
-extern void NutIRQTrigger(uint8_t);
-extern void NutUnixIrqEventPostAsync(uint8_t irq_nr, HANDLE * queue );
-
-__END_DECLS
-
-#endif
